fix overflow-x

--- a/main.css
+++ b/main.css
@@ -23,13 +23,14 @@ body {
   font-size: 18px;
   line-height: 1.6;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
 /* general */
-html {
+.container {
   width: 100vw;
-  overflow-x: hidden;
 }
+
 #skyline {
   width: 100%;
   height: 20%;
